--- a/ASPNETKata/ASPNETKata.csproj
+++ b/ASPNETKata/ASPNETKata.csproj
@@ -205,6 +205,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Product\Index.cshtml" />
+    <Content Include="Views\Product\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
