--- a/ASPNETKata/Web.config
+++ b/ASPNETKata/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="Default" connectionString="Server=localhost;Database=Adventureworks;Uid=username;Pwd=password" />
+    <add name="Default" connectionString="Server=localhost;Database=Adventureworks;Uid=root;Pwd=huffmnhigh1" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
