--- a/ASPNETKata/packages.config
+++ b/ASPNETKata/packages.config
@@ -24,5 +24,9 @@
   <package id="MySql.Data" version="6.10.4" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="Unity.Abstractions" version="2.2.0" targetFramework="net461" />
+  <package id="Unity.Container" version="5.2.0" targetFramework="net461" />
+  <package id="Unity.Mvc" version="5.0.3" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
